# fullapi

./: .gitignore  LICENSE  README.md  pyproject.toml
fullapi/: __init__.py  cli.py  colors.py  config.py  prompt.py  scaffold.py
fullapi/templates/: __init__.py  config.py  crud.py  database.py  deps.py  dockercompose.py  dockerfile.py  env.py  main_basic.py  model.py  requirements.py  router.py  schema.py  security.py
