[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fullapi"
version = "1.0.0"
description = "FastAPI project scaffolder — zero dependencies, one command."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sahil Nayak"}
]
maintainers = [
    {name = "Sahil Nayak"}
]
keywords = ["fastapi", "scaffold", "cli", "generator", "fullapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
fullapi = "fullapi.cli:main"

[project.urls]
Homepage = "https://github.com/sahilnyk/fullapi"
Repository = "https://github.com/sahilnyk/fullapi"

[tool.setuptools.packages.find]
where = ["."]
include = ["fullapi*"]
